Fix search box/instructional text on mobile

--- a/blueprint/wp-content/themes/twentytwelve-blueprint/style.css
+++ b/blueprint/wp-content/themes/twentytwelve-blueprint/style.css
@@ -2939,6 +2939,9 @@ aside.pqRight:after {
 		height:0;
 		padding:0;
 	}
+	#search-form label {
+		display:none !important;
+	}
 }
 /* mobile landscape -------- */
 @media only screen and ( max-width : 768px ) and ( orientation: landscape ) {
